--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             
             <img src="dice-5.png" alt="Dice" class="dice">
             <img src="dice-5.png" alt="Dice" class="dice">
+
+            <div  class="limit__wrapper">
+                enter limit:
+                <input placeholder="enter number" class="limit__content" />
+            </div>
         </div>
         
         <script src="app.js"></script>
