--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>Новая игра</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Бросок</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Сохранить</button>
-            
+            <button class="btn-win"><i class="ion-ios-download-outline"></i>Победители</button>
+
             <img src="dice-5.png" alt="Dice" class="dice">
             <img src="dice-5.png" alt="Dice" class="dice">
 
